--- a/app/app.css
+++ b/app/app.css
@@ -19,6 +19,11 @@ body {
   }
 }
 
+code::before,
+code::after {
+  content: "" !important;
+}
+
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
